# whisper-opencti

./: .dockerignore  .env.dev  .env.example  .env.sample  .flake8  .gitignore  Architecture.md  CLAUDE.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  NOTICE  README.md  config.yml.sample  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.logs.yml  docker-compose.qa.yml  docker-compose.yml  entrypoint.sh  healthcheck.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: connector-architect.md  connector-ci.md  connector-developer.md  connector-docs.md  connector-qa.md
.claude/skills/bug-fix-workflow/: SKILL.md
.claude/skills/ci-cd-pipeline/: SKILL.md
.claude/skills/connector-validation/: SKILL.md
.claude/skills/opencti-connector/: SKILL.md
.claude/skills/opencti-contribution/: SKILL.md
.claude/skills/pre-pr-validation/: SKILL.md
.claude/skills/stix-id-generation/: SKILL.md
.githooks/: install-hooks.sh  pre-push
.github/: vclint-allowlist.txt
.github/workflows/: ci-connector-verified-linter.yml  ci-tests-connectors.yml  ci-unused-deps.yml  ci.yml  gh-do-not-merge-label.yml  gh-pr-check-conventions.yml  release.yml
__metadata__/: connector_manifest.json  connector_manifest_logs.json
docs/: DEVELOPMENT.md  PLATFORMS.md  SPECIFICATIONS.md  TESTING.md  architecture.md  ci-cd-guide.md  qa-handoff.md
docs/scenarios/: 01-domain-dns-pivot.md  02-ip-as-nameserver.md  03-threat-intel-pivot.md  04-agent-activity-logs.md  README.md
docs/website/opencti/: README.md  configuration.md  data-mapping.md  enrichment.md  installation.md  overview.md  requirements.md  troubleshooting.md
shared/pylint_plugins/check_stix_plugin/: README.md
src/: main.py  main_logs.py  requirements.txt
src/connector/: __init__.py  agents_client.py  catalog.py  config.py  connector.py  converter_to_stix.py  exceptions.py  iana_registrars.py  log_converter.py  log_source.py  queries.py  result_parser.py  settings.py  stix_mapper.py  whisper_client.py
tests/: conftest.py  test-requirements.txt  test_agents_client.py  test_catalog.py  test_connector.py  test_converter_to_stix.py  test_log_converter.py  test_log_queries.py  test_log_source.py  test_main.py  test_queries.py  test_result_parser.py  test_settings.py  test_stix_mapper.py  test_whisper_client.py
tools/: gen_iana_registrars.py
