[project]
name = "whisper-opencti"
version = "0.1.0"
description = "OpenCTI connector that enriches indicators with Whisper graph data."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Whisper Security" }]
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]
