[project]
name = "whisper-opencti"
version = "1.0.1"
description = "OpenCTI connector that enriches indicators with Whisper graph data."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Whisper Security" }]
license = { text = "Apache-2.0" }

# Lint / format toolchain matches OpenCTI-Platform/connectors upstream
# (ci-requirements.txt + lint.yml workflow): isort + black for formatting,
# flake8 for basic-error linting, pylint with the vendored
# `linter_stix_id_generator` plugin for STIX-ID dedup correctness.

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
# isort only skips `.venv`/`venv` by default (black respects .gitignore, so
# it never had this problem) - without this it recurses into `.venv-sdk` and
# rewrites import order inside installed site-packages, breaking packages
# with order-dependent imports (dill, which pylint loads).
extend_skip = [".venv-sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"